--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "express-demo",
-  "version": "1.0.0",
+  "name": "auto-api",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "type": "module",
