--- a/package.json
+++ b/package.json
@@ -1,57 +1,62 @@
 {
-  "name": "auto-api",
+  "name": "auto-api-gen",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "type": "module",
+  "bin": {
+    "auto-api": "./bin/entry.js"
+  },
   "scripts": {
-    "rollup:watch": "rollup -c --watch",
+    "build:scripts": "tsc -p tsconfig.scripts.json",
+    "build:main": "tsc -p tsconfig.project.json",
+    "build": "npm run build:main && npm run build:scripts",
     "watch:ts": "tsc --watch",
     "watch:endpoints": "cpx \"endpoints/**/*\" \"temp/endpoints\" -w",
-    "dev": "concurrently \"tsc --watch\" \"nodemon --watch temp temp/index.js\"",
+    "dev": "npm run build && npx auto-api dev",
     "test": "vitest run --coverage",
     "test:mutation": "npx stryker run && rimraf .stryker-tmp",
-    "clean": "rimraf temp && rimraf dist && rimraf reports && rimraf coverage && rimraf .stryker-tmp"
+    "clean": "rimraf temp && rimraf bin && rimraf dist && rimraf reports && rimraf coverage && rimraf .stryker-tmp"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/generator": "^7.28.3",
-    "@babel/parser": "^7.28.4",
-    "@babel/traverse": "^7.28.4",
-    "@babel/types": "^7.28.4",
+    "@babel/generator": "^7.28.5",
+    "@babel/parser": "^7.28.5",
+    "@babel/traverse": "^7.28.5",
+    "@babel/types": "^7.28.5",
+    "chokidar": "^4.0.3",
     "express": "^5.1.0",
-    "micromatch": "^4.0.8"
+    "tsc": "2.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-commonjs": "^28.0.9",
     "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-node-resolve": "^16.0.3",
     "@rollup/plugin-terser": "^0.4.4",
-    "@stryker-mutator/core": "^9.1.1",
-    "@stryker-mutator/jest-runner": "^9.1.1",
-    "@stryker-mutator/vitest-runner": "^9.1.1",
-    "@stylistic/eslint-plugin": "^5.4.0",
+    "@stryker-mutator/core": "^9.2.0",
+    "@stryker-mutator/jest-runner": "^9.2.0",
+    "@stryker-mutator/vitest-runner": "^9.2.0",
+    "@stylistic/eslint-plugin": "^5.5.0",
     "@types/babel__generator": "^7.27.0",
     "@types/babel__traverse": "^7.28.0",
-    "@types/express": "^5.0.3",
-    "@types/micromatch": "^4.0.9",
-    "@types/node": "^24.5.2",
-    "@typescript-eslint/eslint-plugin": "^8.44.1",
-    "@typescript-eslint/parser": "^8.44.1",
-    "@vitest/coverage-v8": "^3.2.4",
+    "@types/express": "^5.0.5",
+    "@types/micromatch": "^4.0.10",
+    "@types/node": "^24.9.1",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
+    "@vitest/coverage-v8": "^4.0.4",
     "concurrently": "^9.2.1",
     "cpx": "^1.5.0",
-    "eslint": "^9.36.0",
-    "jiti": "^2.6.0",
-    "nodemon": "^3.1.10",
+    "eslint": "^9.38.0",
+    "jiti": "^2.6.1",
     "rimraf": "^6.0.1",
-    "rollup": "^4.52.3",
+    "rollup": "^4.52.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2",
+    "typescript": "^5.9.3",
     "undici-types": "^7.16.0",
-    "vitest": "^3.2.4"
+    "vitest": "^4.0.4"
   }
 }
