--- a/tsconfig.scripts.json
+++ b/tsconfig.scripts.json
@@ -2,12 +2,13 @@
   "compilerOptions": {
     "module": "nodenext",
     "target": "ES2020",
-    "outDir": "temp",
-    "rootDir": "src",
+    "outDir": "bin",
+    "rootDir": "scripts",
     "strict": true,
     "esModuleInterop": true,
     "moduleResolution": "nodenext",
     "allowSyntheticDefaultImports": true,
+    "declaration": true,     
   },
-  "include": ["src"]
+  "include": ["scripts"],
 }
