--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auto-api-gen",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "description": "Generate Express APIs automatically from configuration or endpoint files.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -28,6 +28,7 @@
     "@types/lodash.debounce": "^4.0.9",
     "chokidar": "^4.0.3",
     "express": "^5.1.0",
+    "jsdom": "^27.0.1",
     "lodash.debounce": "^4.0.8",
     "typescript": "^5.9.3"
   },
@@ -44,6 +45,7 @@
     "@types/babel__generator": "^7.27.0",
     "@types/babel__traverse": "^7.28.0",
     "@types/express": "^5.0.5",
+    "@types/jsdom": "^27.0.0",
     "@types/micromatch": "^4.0.10",
     "@types/node": "^24.9.1",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
