--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auto-api-gen",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Generate Express APIs automatically from configuration or endpoint files.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -31,6 +31,8 @@
     "express": "^5.1.0",
     "jsdom": "^27.0.1",
     "lodash.debounce": "^4.0.8",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
@@ -58,7 +60,6 @@
     "jiti": "^2.6.1",
     "rimraf": "^6.0.1",
     "rollup": "^4.52.5",
-    "ts-node": "^10.9.2",
     "undici-types": "^7.16.0",
     "vitest": "^4.0.4"
   }
